rewrite the code using scss and add new sections

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./scss/style.min.css">
     <title>Document</title>
 </head>
 
@@ -54,7 +54,7 @@
                     <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
                     <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
                     <div class="promo_descr">Компания UBER динамически развивающаяся. Компания на рынке занимает
-                        лидирующее место среди таксомоторных компаний, Компания абсолютно прозрачная вы можете
+                        лидирующее место средитаксомоторных компаний, Компания абсолютно прозрачная вы можете
                         контролировать все процессы у себя в личном кабинете. Бонуcная система.Помимо выполненной работы
                         по заказам, компания начисляет бонусы за пиковое время.
                         <br><br>
@@ -104,7 +104,7 @@
                             <img src="./icons/reasons/2.png" alt="reason" class="reasons_img">
                         </div>
                         <div class="reasons_descr">
-                            <div class="reasons_subtitle">Высокий доход с гарантированными выплатами</div>
+                            <div class="reasons_subtitle">Высокий доход с гарантированнымивыплатами</div>
                             <div class="reasons_text">Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.</div>
                         </div>
                     </div>
@@ -174,6 +174,79 @@
             </div>
         </div>
     </section>
+
+    <section class="mobile">
+        <div class="container">
+            <div class="label">Возможности</div>
+            <h2 class="title">мобильное приложение убер</h2>
+            <div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mobile_block mobile_block_img_1">
+                        <div class="mobile_block_text">оформление заказа одним касанием</div>
+                        <div class="mobile_block_plus">
+                            <img src="./icons/plus.png" alt="plus">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="mobile_block mobile_block_img_2">
+                        <div class="mobile_block_text">надежная подача</div>
+                        <div class="mobile_block_plus">
+                            <img src="./icons/plus.png" alt="plus">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="mobile_block mobile_block_img_3">
+                        <div class="mobile_block_text">прозрачные цены</div>
+                        <div class="mobile_block_plus">
+                            <img src="./icons/plus.png" alt="plus">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="mobile_block mobile_block_img_4">
+                        <div class="mobile_block_text">безналичная оплата</div>
+                        <div class="mobile_block_plus">
+                        <img src="./icons/plus.png" alt="plus">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="mobile_block mobile_block_img_5">
+                        <div class="mobile_block_text ">обратная связь</div>
+                        <div class="mobile_block_plus">
+                        <img src="./icons/plus.png" alt="plus">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="mobile_block mobile_block_img_6">
+                        <div class="mobile_block_text">разделить стоимость поездки</div>
+                        <div class="mobile_block_plus">
+                            <img src="./icons/plus.png" alt="plus" >
+                        </div>    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="choise  choise_light">
+        <div class="choise_dark"> </div>
+        <div class="label label_light">Возможности</div>
+        <h2 class="title title_light">Выбор - отличная штука!</h2>
+        <div class="subtitle subtitle_light">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
+        <img src="./img/uber_car.png" alt="car" class="choise_img_car">
+        <div class="choise_descr">Машины на каждый день.Лучше, быстрее и дешевле, чем такси</div>
+    </section>
+
 
 </body>
 
