--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
         </div>
     </section>
 
-    <!-- <section class="mobile">
+    <section class="mobile">
         <div class="container">
             <div class="label">Возможности</div>
             <h2 class="title">мобильное приложение убер</h2>
@@ -334,9 +334,9 @@
 
     <footer>
         <div class="footer_divider"></div>
-        <div class="footer_wrapper"> -->
+        <div class="footer_wrapper">
 
-            <!-- <div>
+            <div>
                 <div class="footer_social">
                     <a href="#" class="footer_social_item">
                         <i class="fab fa-facebook-f"></i>
@@ -383,8 +383,9 @@
                 </div>
             </div>
         </div>
-    </footer> -->
-<script src="./js/script (1).js"></script>
+    </footer>
+
+    <script src="./js/script (1).js"></script>
 </body>
 
 </html>
